# hantec-task

./: .gitignore  CMakeLists.txt  README.md  TASKS.md  build.sh  sample_output_burst.txt  sample_output_normal.txt
src/: main.cpp
src/client/: ClientSimulator.cpp  ClientSimulator.h
src/logger/: Logger.cpp  Logger.h
src/models/: TradeRequest.h  TradeResult.h
src/mt_api/: IMTBrokerAPI.h  MockMTAPI.cpp  MockMTAPI.h
src/processor/: DealProcessor.cpp  DealProcessor.h  Validator.h
src/queue/: ThreadSafeQueue.h
src/tracker/: ResultTracker.cpp  ResultTracker.h
